# game_of_life

./: .clang-format  .clang-tidy  .clangd  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yaml
firmware/: CMakeLists.txt  display_tools.hpp  game_of_life.hpp  main.cpp  stm32f103c8.ld
firmware/drivers/display/: sh_1106.hpp
firmware/hal/: adc.hpp  i2c.hpp
tests/: CMakeLists.txt  test_game_of_life.cpp
tools/: udev.sh
